[package]
name = "table_idx"
version = "1.0.1"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Get any row,column combination from a terminal output"
repository = "https://github.com/sigmaSd/Index"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
path = "src/main.rs"
name = "idx"
